"days until" displayed on dashboard bookings

--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -17,7 +17,7 @@
 					#[each]
 					<a href="/booking-details/#booking-id" class="list-group-item">
 						<i class="fa fa-fw fa-clock-o"></i> #patient-name, #therapy-name
-						<span class="label label-default label-as-badge pull-right">#date</span>
+						<span class="label label-default label-as-badge pull-right">#days-until</span>
 					</a>
 					#[/each]
 
