--- a/src/main/resources/static/booking-details.html
+++ b/src/main/resources/static/booking-details.html
@@ -39,6 +39,15 @@
 
 <div class="row">
 	<div class="col-md-4 col-lg-4 text-right">
+		<p><strong>Tracer:</strong></p>
+	</div>
+	<div class="col-md-8 col-lg-8">
+		<p>#tracer-name, #tracer-dose</p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-4 col-lg-4 text-right">
 		<p><strong>Status:</strong></p>
 	</div>
 	<div class="col-md-8 col-lg-8">
