Tracer order status editing

--- a/src/main/resources/static/tracer-order-details.html
+++ b/src/main/resources/static/tracer-order-details.html
@@ -60,9 +60,9 @@
 		<p><strong>Update Status:</strong></p>
 	</div>
 	<div class="col-md-8 col-lg-8">
-		<button class="btn confirm-button" data-id="#id"><i class="fa fa-check-circle"></i> Ordered</button>
-		<button class="btn edit-button" data-id="#id"><i class="fa fa-minus-circle"></i> Pending</button>
-		<button class="btn delete-button" data-id="#id"><i class="fa fa-times-circle"></i> Cancelled</button>
+		<button class="btn confirm-button link-button" data-id="#id" data-target="/tracer-order-details/#tracer-order-id/ordered"><i class="fa fa-check-circle"></i> Ordered</button>
+		<button class="btn edit-button link-button" data-id="#id" data-target="/tracer-order-details/#tracer-order-id/pending"><i class="fa fa-minus-circle"></i> Pending</button>
+		<button class="btn delete-button link-button" data-id="#id" data-target="/tracer-order-details/#tracer-order-id/cancelled"><i class="fa fa-times-circle"></i> Cancelled</button>
 	</div>
 </div>
 #[/if]
