Booking order status editing

--- a/src/main/resources/static/booking-details.html
+++ b/src/main/resources/static/booking-details.html
@@ -74,6 +74,16 @@
 </div>
 
 <div class="row">
+	<div class="col-md-4 col-lg-4 text-right">
+		<p><strong>Update Status:</strong></p>
+	</div>
+	<div class="col-md-8 col-lg-8">
+		<button class="btn confirm-button link-button" data-id="#id" data-target="/booking-details/#booking-id/confirmed"><i class="fa fa-check-circle"></i> Confirmed</button>
+		<button class="btn edit-button link-button" data-id="#id" data-target="/booking-details/#booking-id/unconfirmed"><i class="fa fa-minus-circle"></i> Unconfirmed</button>
+	</div>
+</div>
+
+<div class="row">
 	<div class="col-lg-12">
 		<h1 class="page-header">
 			Booking Schedule
