Permissions checking on status changes

--- a/src/main/resources/static/tracer-order-details.html
+++ b/src/main/resources/static/tracer-order-details.html
@@ -55,6 +55,7 @@
 	</div>
 </div>
 
+#[ifperm: EDIT_TRACERS]
 <div class="row">
 	<div class="col-md-4 col-lg-4 text-right">
 		<p><strong>Update Status:</strong></p>
@@ -65,6 +66,7 @@
 		<button class="btn delete-button link-button" data-id="#id" data-target="/tracer-order-details/#tracer-order-id/cancelled"><i class="fa fa-times-circle"></i> Cancelled</button>
 	</div>
 </div>
+#[/ifperm]
 #[/if]
 
 ##_footer.html
