--- a/src/main/resources/static/booking-details.html
+++ b/src/main/resources/static/booking-details.html
@@ -73,6 +73,7 @@
 	</div>
 </div>
 
+#[ifperm: EDIT_APPOINTMENTS]
 <div class="row">
 	<div class="col-md-4 col-lg-4 text-right">
 		<p><strong>Update Status:</strong></p>
@@ -82,6 +83,7 @@
 		<button class="btn edit-button link-button" data-id="#id" data-target="/booking-details/#booking-id/unconfirmed"><i class="fa fa-minus-circle"></i> Unconfirmed</button>
 	</div>
 </div>
+#[/ifperm]
 
 <div class="row">
 	<div class="col-lg-12">
