--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -196,9 +196,10 @@
 					<div class="row">
                         <div class="col-lg-12">
                             #[if: show-password-reminder = yes]
-                            <div class="alert alert-warning" style="margin-top: 50px" role="alert">
-                                You have #current-user-days-until-password-change days remaining before you will be forced to change your password. <a href="/profile?changepw=1">Click to change it now.</a>
-                            </div>
+							<div class="alert alert-warning" style="margin-top: 50px" role="alert">
+								<p>You have #current-user-days-until-password-change days remaining before you will be forced to change your password.
+								<a href="/profile?changepw=1">Click to change it now.</a></p>
+							</div>
                             #[/if]
 							<h1 class="page-header">
 								#title
