Bug fix: password form re-opens when submitted

--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -66,6 +66,7 @@
 				#[/if]
 				<form class="form-horizontal edit-form">
 					<input type="hidden" name="entity-type" value="staff-password-change"/>
+					<input type="hidden" class="location-override" value="/profile"/>
 
 					<div class="form-group">
 						<label for="password_old" class="col-sm-3 control-label">Current Password</label>
