Made space between calendar and booking options

--- a/src/main/resources/static/appointments.html
+++ b/src/main/resources/static/appointments.html
@@ -100,9 +100,9 @@
 	<div hidden class="col-md-12 col-lg-12 calendar"></div>
 </div>
 
-<link href="/css/appointment.css" rel="stylesheet">
 <script src="/js/core/jquery-ui.min.js"></script>
 <script src="/js/plugins/fullcalendar/fullcalendar.min.js"></script>
 <script src="/js/appointments.js"></script>
+<link href="/css/appointments.css" rel="stylesheet">
 
 ##_footer.html
