--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -6,7 +6,7 @@
 	<div class="col-lg-12 col-md-12">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="panel-title">Day Summary</h3>
+				<h3 class="panel-title"><i class="fa fa-fw fa-angle-down"></i> Day Summary</h3>
 			</div>
 			<div class="panel-body">
 				<div class="list-group">
@@ -42,7 +42,7 @@
 	<div class="col-lg-6 col-md-6">
 		<div class="panel panel-yellow">
 			<div class="panel-heading">
-				<h3 class="panel-title">Unconfirmed Bookings</h3>
+				<h3 class="panel-title"><i class="fa fa-fw fa-angle-down"></i> Unconfirmed Bookings</h3>
 			</div>
 			<div class="panel-body">
 				<div class="list-group">
@@ -77,7 +77,7 @@
 	<div class="col-lg-6 col-md-6">
 		<div class="panel panel-red">
 			<div class="panel-heading">
-				<h3 class="panel-title">Unordered Tracers</h3>
+				<h3 class="panel-title"><i class="fa fa-fw fa-angle-down"></i> Unordered Tracers</h3>
 			</div>
 			<div class="panel-body">
 				<div class="list-group">
@@ -110,5 +110,7 @@
 		</div>
 	</div>
 </div>
+
+<script type="text/javascript" src="/js/dashboard.js"></script>
 
 ##_footer.html
