--- a/src/main/resources/static/appointments.html
+++ b/src/main/resources/static/appointments.html
@@ -89,7 +89,7 @@
                 <strong>Patient Selected:</strong> <span class="patient-selected"></span>&nbsp;
             </div>
             <div class="col-sm-4">
-                <strong>Therapy Selected:</strong><span class="therapy-selected"></span>
+                <strong>Therapy Selected:</strong><span class="therapy-selected"></span></i>
 			<a class="small" id="go-back-to-select-therapy">[Change]</a>
             </div>
         </div><br>
