Eveerything up to date - rebasing now

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -21,6 +21,7 @@
 		#[/if]
 		#[if: calendar]
 		<link href="/css/plugins/fullcalendar/fullcalendar.min.css" rel="stylesheet" type="text/css"/>
+		<link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
 		#[/if]
 
 
