Tracer order page options in blue alert box

--- a/src/main/resources/static/tracer-orders.html
+++ b/src/main/resources/static/tracer-orders.html
@@ -4,8 +4,10 @@
 ##_header.html
 
 <div class="row">
-	<div class="col-lg-12">
-		<p><strong>Show:</strong>
+	<div class="col-lg-12 alert alert-info">
+		<p>
+			<strong>Show:</strong>
+			&nbsp;&nbsp;&nbsp;
 			<i class="fa fa-fw fa-#[if: mode = show-all]check-#[/if]square-o"></i> <a href="/tracer-orders?mode=show-all">All Orders</a>
 			&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
 			<i class="fa fa-fw fa-#[if: mode = pending-only]check-#[/if]square-o"></i> <a href="/tracer-orders?mode=pending-only">Pending Orders Only</a>
