Renamed "appointments" to "new-booking"

--- a/src/main/resources/static/new-booking.html
+++ b/src/main/resources/static/new-booking.html
@@ -53,7 +53,6 @@
 			<thead>
 				<tr>
 					<th class="text-center">Name</th>
-					<th class="text-center">Default Duration</th>
 					<th class="text-center">Tracer Required</th>
 					<th class="text-center">Tracer Dose</th>
 					<th class="text-center">Camera Required</th>
@@ -69,7 +68,6 @@
 				#[each]
 				<tr>
 					<td>#name</td>
-					<td>#default-duration mins</td>
 					<td>#tracer-required-name</td>
 					<td>#tracer-dose</td>
 					<td>#camera-type-label</td>
@@ -111,6 +109,6 @@
 
 <script src="/js/core/jquery-ui.min.js"></script>
 <script src="/js/plugins/fullcalendar/fullcalendar.min.js"></script>
-<script src="/js/appointments.js"></script>
+<script src="/js/new-booking.js"></script>
 
 ##_footer.html
