Added camera summary to new booking page

--- a/src/main/resources/static/new-booking.html
+++ b/src/main/resources/static/new-booking.html
@@ -55,7 +55,7 @@
 					<th class="text-center">Name</th>
 					<th class="text-center">Tracer Required</th>
 					<th class="text-center">Tracer Dose</th>
-					<th class="text-center">Camera Required</th>
+					<th class="text-center">Cameras Types</th>
 					<th class="text-center">Actions</th>
 				</tr>
 			</thead>
@@ -70,7 +70,7 @@
 					<td>#name</td>
 					<td>#tracer-required-name</td>
 					<td>#tracer-dose</td>
-					<td>#camera-type-label</td>
+					<td>#HTMLOKAY:camera-type-summary</td>
 					<td>
 						<button class="btn select-therapy" data-id="#id" data-name="#name">Select</button>
 					</td>
