--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -109,6 +109,6 @@
 
 <script src="/js/core/jquery-ui.min.js"></script>
 <script src="/js/plugins/fullcalendar/fullcalendar.min.js"></script>
-<script src="/js/new-booking.js"></script>
+<script src="/js/new-booking-stage-1.js"></script>
 
 ##_footer.html
