--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -107,6 +107,42 @@
 	<div hidden class="col-md-12 col-lg-12 calendar"></div>
 </div>
 
+<div class="modal hide fade time-modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="create-mode">Select times</h3>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal edit-form">
+                    <div class="form-group">
+                        <label for="booking-start-time" class="col-sm-3 control-label">Starts at :</label>
+                        <div class="col-sm-9">
+                            <select class="form-control" name="booking-start-time" id="booking-start-time">
+                                <option value="#id"> yolooooo</option>
+                            </select>
+                            <p class="help-block">Booking hour to start.</p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="booking-end-time" class="col-sm-3 control-label">Ends at :</label>
+                        <div class="col-sm-9">
+                            <select class="form-control" name="booking-end-time" id="booking-end-time">
+                                <option value="#id"> yolooooo</option>
+                            </select>
+                            <p class="help-block">Booking hour to end.</p>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-cancel">Cancel</button>
+                <button type="button" class="btn btn-primary btn-save">Ok</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="/js/core/jquery-ui.min.js"></script>
 <script src="/js/plugins/fullcalendar/fullcalendar.min.js"></script>
 <script src="/js/new-booking-stage-1.js"></script>
