--- a/src/main/resources/static/new-booking-stage-2.html
+++ b/src/main/resources/static/new-booking-stage-2.html
@@ -4,6 +4,12 @@
 ##_header.html
 
 <div class="row">
+	<div class="col-md-offset-2 col-lg-offset-2 col-md-7 col-lg-7 alert alert-info">
+		<p>You are creating a booking for the following patient, therapy and schedule:</p>
+	</div>
+</div>
+
+<div class="row">
 	<div class="col-md-4 col-lg-4 text-right">
 		<p><strong>Patient:</strong></p>
 	</div>
@@ -39,6 +45,129 @@
 		#[empty]<p>This booking currently has no schedule.</p>#[/empty]
 
 		#[/collection]
+	</div>
+</div>
+
+<hr/>
+
+<div class="row">
+	<div class="col-md-offset-2 col-lg-offset-2 col-md-7 col-lg-7 alert alert-info">
+		<p><strong>Please confirm</strong> all of the following information:</p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-4 col-lg-4 text-right">
+		<label for="camera" class="control-label">Camera</label>
+	</div>
+	<div class="col-md-4 col-lg-4">
+		<select class="form-control" name="camera" id="camera">
+			#[collection: cameras]
+
+			#[pre]#[/pre]
+
+			#[each]
+			<option value="#camera-id">#camera-type-label, #room-number</option>
+			#[/each]
+
+			#[post]#[/post]
+
+			#[empty]#[/empty]
+
+			#[/collection]
+		</select>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-4 col-lg-4 text-right">
+		<label for="tracer" class="control-label">Tracer</label>
+	</div>
+	<div class="col-md-4 col-lg-4">
+		<select class="form-control" name="tracer" id="tracer">
+			#[collection: cameras]
+
+			#[pre]#[/pre]
+
+			#[each]
+			<option value="#camera-id">#camera-type-label, #room-number</option>
+			#[/each]
+
+			#[post]#[/post]
+
+			#[empty]#[/empty]
+
+			#[/collection]
+		</select>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-4 col-lg-4 text-right">
+		<label for="tracer-dose" class="control-label">Tracer Dose</label>
+	</div>
+	<div class="col-md-4 col-lg-4">
+		<select class="form-control" name="tracer-dose" id="tracer-dose">
+			#[collection: cameras]
+
+			#[pre]#[/pre]
+
+			#[each]
+			<option value="#camera-id">#camera-type-label, #room-number</option>
+			#[/each]
+
+			#[post]#[/post]
+
+			#[empty]#[/empty]
+
+			#[/collection]
+		</select>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-4 col-lg-4 text-right">
+		<label for="tracer-order" class="control-label">Tracer Order</label>
+	</div>
+	<div class="col-md-4 col-lg-4">
+		<select class="form-control" name="tracer-order" id="tracer-order">
+			#[collection: cameras]
+
+			#[pre]#[/pre]
+
+			#[each]
+			<option value="#camera-id">#camera-type-label, #room-number</option>
+			#[/each]
+
+			#[post]#[/post]
+
+			#[empty]#[/empty]
+
+			#[/collection]
+		</select>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-4 col-lg-4 text-right">
+		<label for="staff" class="control-label">Staff Members</label>
+	</div>
+	<div class="col-md-4 col-lg-4">
+		<select class="form-control" name="staff" id="staff">
+			#[collection: cameras]
+
+			#[pre]#[/pre]
+
+			#[each]
+			<option value="#camera-id">#camera-type-label, #room-number</option>
+			#[/each]
+
+			#[post]#[/post]
+
+			#[empty]#[/empty]
+
+			#[/collection]
+		</select>
 	</div>
 </div>
 
