--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -24,6 +24,7 @@
 		#[/if]
 		#[if: current-page = new-booking]
 		<link href="/css/new-booking-stage-1.css" rel="stylesheet" type="text/css"/>
+		<link href="/css/new-booking-stage-2.css" rel="stylesheet" type="text/css"/>
 		#[/if]
 
 		<!-- data-tables CSS -->
