--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -69,7 +69,7 @@
 				<tr>
 					<td>#name</td>
 					<td>#tracer-required-name</td>
-					<td>#tracer-dose</td>
+					<td>#therapy-tracer-dose</td>
 					<td>#HTMLOKAY:camera-type-summary</td>
 					<td>
 						<button class="btn select-therapy" data-id="#id" data-name="#name">Select</button>
