--- a/src/main/resources/static/therapies.html
+++ b/src/main/resources/static/therapies.html
@@ -29,7 +29,7 @@
 				<tr>
 					<td>#name</td>
 					<td>#tracer-required-name</td>
-					<td>#tracer-dose</td>
+					<td>#therapy-tracer-dose</td>
 					<td>
                         #[ifperm: EDIT_THERAPIES]
 						<button class="btn edit-button" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
