--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -190,7 +190,7 @@
 					#[/ifperm]
 					#[ifperm: VIEW_ACTION_LOG]
 					<li
-					#[if: current-page = action-log] class="active"#[/if]>
+					#[if: current-page = action-logs] class="active"#[/if]>
 					<a href="/action-log"><i class="fa fa-fw fa-lg fa-list"></i> Action Log</a>
 					</li#[if: current-page = settings] class="active"#[/if]>
 					#[/ifperm]
