fixed bug where the collection had the wrong name

--- a/src/main/resources/static/action-log.html
+++ b/src/main/resources/static/action-log.html
@@ -16,7 +16,7 @@
             </tr>
             </thead>
             <tbody>
-            #[collection: action-log]
+            #[collection: action-logs]
 
             #[pre]#[/pre]
 
