Adding staff to booking (untested)

--- a/src/main/resources/static/new-booking-stage-2.html
+++ b/src/main/resources/static/new-booking-stage-2.html
@@ -61,6 +61,7 @@
 	<input type="hidden" name="patient" value="#patient-id"/>
 	<input type="hidden" name="therapy" value="#therapy-id"/>
 	<input type="hidden" name="default-tracer" value="#default-tracer-id"/>
+	<input type="hidden" name="assigned-staff" value="0"/>
 
 	<div class="form-group">
 		<div class="col-md-4 col-lg-4 text-right">
@@ -171,6 +172,7 @@
 				#[/collection]
 			</select>
 			<p class="help-block"><a href="javascript:;" class="add-staff-member"><span class="fa fa-plus"></span> Add</a></p>
+			<p class="help-block assigned-staff"></p>
 		</div>
 	</div>
 
