Moved toastr into footer

--- a/src/main/resources/static/_footer.html
+++ b/src/main/resources/static/_footer.html
@@ -7,8 +7,25 @@
 </script>
 <script src="/js/core/bootstrap.min.js"></script>
 <script src="/js/global.js"></script>
-#[if: crud]
 <script src="/js/plugins/toastr/toastr.min.js"></script>
+<script type="text/javascript">
+	// toastr options
+	toastr.options = {
+		"closeButton": true,
+		"debug": false,
+		"positionClass": "toast-top-right",
+		"onclick": null,
+		"showDuration": "1000",
+		"hideDuration": "1000",
+		"timeOut": "4000",
+		"extendedTimeOut": "1000",
+		"showEasing": "swing",
+		"hideEasing": "linear",
+		"showMethod": "fadeIn",
+		"hideMethod": "fadeOut"
+	};
+</script>
+#[if: crud]
 <script src="/js/crud-page.js"></script>
 #[/if]
 
