caps lock indicator on login screen

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -54,7 +54,7 @@
 					<div class="form-group">
                         <label class="login-label" for="password">Please enter your password or PIN and press enter.</label>
                         <div class="icon-field input-group">
-                            <input class="form-control" type="password" name="password" id="password"/>
+                            <input class="form-control" type="password" name="password" id="password" data-toggle="tooltip" data-trigger="manual" data-title="Caps Lock is on" onkeypress="checkCapsLockStatus()"/>
                             <span class="input-group-addon"><i class="fa fa-lock"></i></span>
                         </div>
 					</div>
