--- a/src/main/resources/static/_login-header.html
+++ b/src/main/resources/static/_login-header.html
@@ -20,6 +20,7 @@
 		<!-- keep in header! -->
 		<script src="/js/core/jquery.min.js"></script>
         <script type="text/javascript">var stage = #stage;</script>
+        <script src="/js/core/bootstrap.min.js"></script>
         <script src="/js/login.js"></script>
 
 		<!--[if lt IE 9]>
