added caps-lock indicator on the Change Password modal

--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -71,21 +71,21 @@
 					<div class="form-group">
 						<label for="password_old" class="col-sm-3 control-label">Current Password</label>
 						<div class="col-sm-9">
-							<input class="form-control" type="password" name="password_old" id="password_old"/>
+							<input class="form-control" type="password" name="password_old" id="password_old" data-toggle="tooltip" data-trigger="manual" data-title="Caps Lock is on" onkeypress="checkCapsLockStatus()"/>
 							<p class="help-block">Please enter your current password.</p>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="password" class="col-sm-3 control-label">New Password</label>
 						<div class="col-sm-9">
-							<input class="form-control" type="password" name="password" id="password"/>
+							<input class="form-control" type="password" name="password" id="password" data-toggle="tooltip" data-trigger="manual" data-title="Caps Lock is on" onkeypress="checkCapsLockStatus()"/>
 							<p class="help-block">Please enter your desired new password.</p>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="password_check" class="col-sm-3 control-label">Confirm New Password</label>
 						<div class="col-sm-9">
-							<input class="form-control" type="password" name="password_check" id="password_check"/>
+							<input class="form-control" type="password" name="password_check" id="password_check" data-toggle="tooltip" data-trigger="manual" data-title="Caps Lock is on" onkeypress="checkCapsLockStatus()"/>
 							<p class="help-block">Please enter your desired new password again.</p>
 						</div>
 					</div>
