cleaned up code by moving caps lock indicator JS to its own file, instead of having the same code in both global.js and login.js. Also fixed tooltip placement in Change Password modal.

--- a/src/main/resources/static/_footer.html
+++ b/src/main/resources/static/_footer.html
@@ -7,6 +7,7 @@
 </script>
 <script src="/js/core/bootstrap.min.js"></script>
 <script src="/js/global.js"></script>
+<script src="/js/plugins/caps-lock-indicator/capslock.js"></script>
 #[if: crud]
 <script src="/js/plugins/toastr/toastr.min.js"></script>
 <script src="/js/crud-page.js"></script>
