--- a/src/main/resources/static/_login-header.html
+++ b/src/main/resources/static/_login-header.html
@@ -22,6 +22,7 @@
         <script type="text/javascript">var stage = #stage;</script>
         <script src="/js/core/bootstrap.min.js"></script>
         <script src="/js/login.js"></script>
+        <script src="/js/plugins/caps-lock-indicator/capslock.js"></script>
 
 		<!--[if lt IE 9]>
 		<script src="/js/core/html5shiv.js"></script>
