--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -24,6 +24,7 @@
 		#[/if]
 		#[if: current-page = new-booking]
 		<link href="/css/new-booking-stage-1.css" rel="stylesheet" type="text/css"/>
+		<link href="/css/new-booking-stage-2.css" rel="stylesheet" type="text/css"/>
 		#[/if]
 
 		<!-- data-tables CSS -->
@@ -189,7 +190,7 @@
 					#[/ifperm]
 					#[ifperm: VIEW_ACTION_LOG]
 					<li
-					#[if: current-page = action-log] class="active"#[/if]>
+					#[if: current-page = action-logs] class="active"#[/if]>
 					<a href="/action-log"><i class="fa fa-fw fa-lg fa-list"></i> Action Log</a>
 					</li#[if: current-page = settings] class="active"#[/if]>
 					#[/ifperm]
