--- a/src/main/resources/static/new-booking-stage-2.html
+++ b/src/main/resources/static/new-booking-stage-2.html
@@ -56,7 +56,7 @@
 	</div>
 </div>
 
-<form class="form-horizontal edit-form">
+<form class="form-horizontal edit-form" method="post">
 
 	<input type="hidden" name="patient" value="#patient-id"/>
 	<input type="hidden" name="therapy" value="#therapy-id"/>
@@ -178,7 +178,7 @@
 
 	<div class="form-group">
 		<div class="col-md-offset-4 col-lg-offset-4 col-md-4 col-lg-4">
-			<button class="btn btn-primary">Confirm Booking</button>
+			<button class="btn btn-primary confirm-booking-button">Confirm Booking</button>
 		</div>
 	</div>
 
