Booking form submission

--- a/src/main/resources/static/new-booking-stage-2.html
+++ b/src/main/resources/static/new-booking-stage-2.html
@@ -56,7 +56,7 @@
 	</div>
 </div>
 
-<form class="form-horizontal edit-form" method="post">
+<form class="form-horizontal edit-form new-booking-form" action="/new-booking-3" method="post">
 
 	<input type="hidden" name="patient" value="#patient-id"/>
 	<input type="hidden" name="therapy" value="#therapy-id"/>
